      \code{insertMethodInEmptyList}, \code{makeMethodsList},
      \code{mergeMethods}, \code{MethodsList}, \code{MethodsListSelect}, and
      \code{SignatureMethod} were made defunct, as were the
      \code{"MethodsList"} branches of functions \code{assignMethodsMetaData},
      \code{finalDefaultMethod}, and \code{MethodAddCoerce}.
    }
  }

  \subsection{INSTALLATION}{
    \itemize{
      \item .
    }
  }

  \subsection{PACKAGE INSTALLATION}{
    \itemize{
      \item .
    }
  }

  \subsection{C-LEVEL FACILITIES}{
    \itemize{
      \item The non-API and hidden entry points \code{Rf_setIVector},
      \code{Rf_setRVector} and \code{Rf_setSVector} have been removed.

      \item The internal code for changing the parent of an environment
      now signals an error if the new parent is not an environment or if
      the change would create a cycle in the parent chain.

      \item The \sQuote{Writing R Extensions} \I{Texinfo} source now
      contains very experimental annotations for more clearly
      identifying the API status of C entry points. These annotations
      are used to produce indices for API, experimental API, and
      embedded API entry points in the rendered versions.  This is very
      preliminary and may be dropped if a better approach emerges.

      \item \code{SET_TYPEOF} now signals an error unless the old and
      new types have compatible memory structure and content. Use of
      \code{SET_TYPE} in package C code should be avoided and may be
      deprecated in the near future. It is better to allocate an object
      of the proper type in the first place.

      \item New API function \code{R_mkClosure}. This checks that its
      arguments are valid and should be used instead of
      \code{allocSExp(CLOSXP} followed by \code{SET_FORMALS},
      \code{SET_BODY}, and \code{SET_CLOENV}.

      \item New API functions \code{R_ClosureFormals},
      \code{R_ClosureBody}, and \code{R_ClosureEnv} for extracting